# bulbul

./: .gitignore  CODEBUDDY.md  LICENSE  README.md  README_EN.md  index.html  package-lock.json  package.json  tag.bat  vite.config.ts  vitest.config.ts
.codebuddy/commands/: git-commit.md
.github/workflows/: release.yml
docs/: canvas2d-refactor-plan.md  mvp-development-plan.md
scripts/: set-version.cjs  tag.mjs
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/models/: species_database.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cache_commands.rs  export_commands.rs  file_commands.rs  image_commands.rs  mod.rs  process_commands.rs  window_commands.rs
src-tauri/src/core/: bird_classification.rs  bird_detection.rs  focus_score.rs  geo_filter.rs  grouping.rs  metadata.rs  mod.rs  nef_parser.rs  phash.rs  raw_parser.rs  raw_processor.rs  similarity.rs
src-tauri/src/models/: detection_cache.rs  directory_cache.rs  error.rs  group_data.rs  image_metadata.rs  mod.rs  processing.rs
src-tauri/src/state/: mod.rs  session.rs
src-tauri/src/utils/: cache.rs  icon.rs  mod.rs  paths.rs  result_cache.rs  windows_icon.rs
src/components/: DetectionOverlay.tsx
src/data/: provinces.ts
src/hooks/: useImageLoader.test.ts  useImageLoader.ts  useKeyboard.test.ts  useKeyboard.ts  useProcessing.ts  useTauriEvents.ts
src/services/: cacheService.test.ts  cacheService.ts  exportService.test.ts  exportService.ts  fileService.test.ts  fileService.ts  imageService.test.ts  imageService.ts  processService.test.ts  processService.ts  updaterService.test.ts  updaterService.ts
(+336 files in other folders)
