[package]
name = "bulbul"
version = "0.7.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bulbul_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "image-png"] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
image = "0.25"
kamadak-exif = "0.5"
rustdct = "0.7"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
num_cpus = "1.17.0"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
lazy_static = "1.4"
flate2 = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"

# ─── 性能关键配置 ────────────────────────────────────
# image/jpeg-decoder/png 等 crate 在 debug 模式下极慢（10-50x 降速），
# 开启依赖库优化让 `cargo tauri dev` 也有合理的图像处理速度。
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
opt-level = 3

